Added changes like no :of questions left,  correct wrong messages, system crash, pause, resume and end game

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,9 @@ body {
     text-wrap: balance;
   }
 }
+.MuiTableSortLabel-icon {
+  opacity: 1 !important; /* Ensures icons are always visible */
+}
+.custom-sort-icon {
+  color: rgba(0, 0, 0, 1) !important;
+}
